# QtTranslationDemo

./: CMakeLists.txt  README.md  de.ts  en.ts  main.cpp  update_translation.sh
